Erie Data analyzed

--- a/Great_Lakes_and_Grand_River.ipynb
+++ b/Great_Lakes_and_Grand_River.ipynb
@@ -99,7 +99,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert Code Here"
+    "# Insert Code Here\n",
+    "\n",
+    "ehu_dat = pd.read_csv('./data/eri.csv', delimiter = ',')\n",
+    "ehu_dat.head()\n",
+    "\n",
+    "plt.plot(ehu_dat['Lake Erie annual averages'], ehu_dat['Unnamed: 1'])\n",
+    "                        "
    ]
   },
   {
@@ -153,7 +159,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert Code Here"
+    "# Insert Code Here\n",
+    "\n",
+    "plt.plot(mhu_frame['Michigan-Huron annual averages'], ehu_dat['Lake Erie Annual Average'])"
    ]
   },
   {
@@ -171,7 +179,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert Code Here"
+    "# Insert Code Here\n",
+    "\n",
+    "plt.plot(ont_data['Lake Ontario annual average'], sup_data['Lake Superior annual average'])\n",
+    "plt.xlabel('Lake Ontario Annual Averages')\n",
+    "plt.ylabel('Lake Superior Annual Averages')\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -290,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
