Commented code because my stuff was deleted

--- a/Great_Lakes_and_Grand_River.ipynb
+++ b/Great_Lakes_and_Grand_River.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert Code Here"
+    "# Hello Ya'll. I'm doing this from the terminal, lol."
    ]
   },
   {
