--- a/Great_Lakes_and_Grand_River.ipynb
+++ b/Great_Lakes_and_Grand_River.ipynb
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert Code Here"
+    "print('Pretend I finished the code.)"
    ]
   },
   {
@@ -290,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
